--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<div class="container">
 					<div class="row align-items-center  ">
 						<div class="col float-md-start text-center">
-							<img class="col img-fluid" src="Amitsingh.jpeg" alt="profile-image">
+							<img class="col img-fluid" src="Amit.png" alt="profile-image">
 						</div>
 						<div class="col float-md-end">
 							<p class="info"> <label class="name">I am Amit Pardeshi</label> , and I am a dedicated
