--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 						</div>
 						<div class="col">
 							<div class="d-flex">
-								<div class="me-2">Address <br> Malegaon(Nasik)</div>
+								<div class="me-2">Address <br> Pune </div>
 							</div>
 						</div>
 					</div>
